--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <script src="./js/script.js" defer></script>
 </head>
 <body>
-    
+    <button id="topRatedMovies">Top 10 Rated Movies</button>
 </body>
 </html>
