Styling to header
CSS styling for header, buttons, title and search field

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <script src="./js/script.js" defer></script>
 </head>
 <body>
-    <button id="topRatedMovies">Top 10 Rated Movies</button>
+    <header class="header">
+        <div class="left-section">
+          <button id="topRated" class="btn">Top Rated</button>
+          <button id="popular" class="btn">Popular</button>
+        </div>
+        <h1 class="title">Couch Potato</h1>
+        <div class="right-section">
+          <input type="text" class="search-field" placeholder="Search...">
+        </div>
+      </header>
+      <div id="container">
+
+      </div>
 </body>
 </html>
