--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Couch Potato</title>
+
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/header_style.css">
+    <link rel="stylesheet" href="./css/movie_container.css">
 
     <script src="./js/anime.min.js" defer></script>
     <script src="./js/script.js" defer></script>
